# db/country.go
@@ -32,11 +32,29 @@ func (q *Queries) AddCountry(ctx context.Context, arg AddCountryParams) (models.
 	return i, err
 }
 
-const getCountriesList = `
-SELECT id,name,country_short_name,created_at FROM country `
+const getTotalCountryCount = `
+SELECT COUNT(*) FROM country
+`
 
-func (q *Queries) GetCountriesList(ctx context.Context) ([]models.Country, error) {
-	rows, err := q.db.QueryContext(ctx, getCountriesList)
+func (q *Queries) GetTotalCountryCount(ctx context.Context) (models.CountryCount, error) {
+	row := q.db.QueryRowContext(ctx, getTotalCountryCount)
+	var i models.CountryCount
+	err := row.Scan(
+		&i.TotalCountryCount,
+	)
+	return i, err
+}
+
+const getCountriesList = `
+SELECT id,name,country_short_name,created_at FROM country WHERE id >= $1 LIMIT $2 `
+
+type GetCountriesListParams struct {
+	FromId int `json:"fromId"`
+	Limit  int `json:"limit"`
+}
+
+func (q *Queries) GetCountriesList(ctx context.Context, arg GetCountriesListParams) ([]models.Country, error) {
+	rows, err := q.db.QueryContext(ctx, getCountriesList, arg.FromId, arg.Limit)
 	if err != nil {
 		return nil, err
 	}
